--- a/templates/inventory/inventory_master.html
+++ b/templates/inventory/inventory_master.html
@@ -203,7 +203,7 @@
 
                                                 <div class="form-floating">
                                                     <input type="text" name="reason" class="form-control" id="reason{{p.id}}" placeholder="Reason" required>
-                                                    <label for="reason{{p.id}}">Reason (e.g. Damage, New Stock)</label>
+                                                    <label for="reason{{p.id}}">Reason</label>
                                                 </div>
                                             </div>
                                             <div class="modal-footer border-0">
@@ -275,4 +275,5 @@
     .btn-light-hover:hover.text-info { color: #0dcaf0 !important; background: #e6fcff; }
 </style>
 {% endblock %}
+
 
