--- a/templates/add_transaction.html
+++ b/templates/add_transaction.html
@@ -280,7 +280,7 @@
         flatpickr("#datePicker", {
             dateFormat: "d-m-Y", 
             altInput: true,      
-            altFormat: "F j, Y", 
+            altFormat: "j F, Y", 
             defaultDate: "today",
             allowInput: true
         });
@@ -296,4 +296,5 @@
     });
 </script>
 {% endblock %}
+
 
